<resources>
    <string name="app_name">Smart Guitar</string>
    <string name="hello_world">Hello World!</string>
    <string name="goodbye">goodbye!</string>
    <string name="change_string">Change string</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send!</string>
    <string name="debug_options">Debug Options</string>
    <string name="server_ip">Server IP:</string>
    <string name="default_server_ip">192.168.3.105</string>
    <string name="server_port">Server Port:</string>
    <string name="_10080">10080</string>
    <string name="verify">Verify</string>
    <string name="debuglog_output">DebugLog output:</string>
    <string name="song">Song:</string>
    <string name="track">Track:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="interactive">Interactive</string>
    <string name="stop">Stop</string>
    <string name="tempo">Tempo:</string>
    <string name="default_tempo">127</string>
    <string name="loop">LOOP</string>
    <string name="to">to bar</string>
    <string name="default_measure_start">0</string>
    <string name="default_end_start">0</string>
    <string name="app_udp_server_is_down">App UDP Server is down</string>
    <string-array name="tab_files">
        <item>simple_ours.txt</item>
        <item>another_file.txt</item>
        <item>Enter tabs file URL&#8230;</item>
    </string-array>

</resources>
