<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dannyboy.smartguitarapp.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/serverConfLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableLayout
                android:id="@+id/settingsTable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtIP"
                        android:layout_width="88dp"
                        android:layout_height="19dp"
                        android:gravity="start"
                        android:text="@string/server_ip"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="35dp" />

                    <EditText
                        android:id="@+id/ipEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:ems="10"
                        android:fontFamily="monospace"
                        android:hint="@string/default_server_ip"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords|textPersonName"
                        android:singleLine="false"
                        android:textSize="12sp"
                        android:typeface="monospace"
                        tools:layout_editor_absoluteX="84dp"
                        tools:layout_editor_absoluteY="31dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/txtPort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/server_port"
                        android:textColor="@android:color/black"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="87dp" />

                    <EditText
                        android:id="@+id/portEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:fontFamily="monospace"
                        android:hint="@string/_10080"
                        android:inputType="textPersonName"
                        android:textSize="12sp"
                        android:typeface="monospace"
                        tools:ignore="Autofill"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="72dp" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="0dp"
                android:text="@string/verify"
                tools:text="Verify" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/debugSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dip">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@android:color/background_dark"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/debugViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/debuglog_output"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="12sp"
                    tools:text="DebugLog™ output:" />

                <TextView
                    android:id="@+id/debugView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:gravity="start"
                    android:maxLines="20"
                    android:scrollbars="vertical"

                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="11sp"
                    android:typeface="monospace"
                    tools:ignore="SmallSp"
                    tools:layout_editor_absoluteX="187dp"
                    tools:layout_editor_absoluteY="336dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/userSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/songSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0"
                    android:text="@string/song"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="start" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="52dp"
                    android:layout_height="37dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/trackSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trackName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0"
                    android:gravity="start"
                    android:text="@string/track"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/tracksSpinner"
                    android:layout_width="52dp"
                    android:layout_height="37dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/playControlLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ToggleButton
                        android:id="@+id/playPauseButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:text="@string/togglebutton"
                        android:textOff="@string/play"
                        android:textOn="@string/pause"
                        android:elevation="1dp"
                        android:layout_margin="3dp"
                        android:translationZ="1dp"
                        tools:ignore="NestedWeights" />

                    <ToggleButton
                        android:id="@+id/loopButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_blue_light"
                        android:text="@string/togglebutton"
                        android:textOff="@string/loop"
                        android:textOn="@string/loop"
                        android:elevation="1dp"
                        android:layout_margin="3dp"
                        android:translationZ="1dp"
                        tools:ignore="NestedWeights" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/interactive"
                        android:textAlignment="center"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/stopButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_red_light"
                        android:text="@string/stop"
                        android:elevation="1dp"

                        android:layout_margin="3dp"
                        android:translationZ="1dp"
                        tools:ignore="NestedWeights" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/loopStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/default_measure_start"
                            android:inputType="number"
                            android:textAlignment="center"
                            android:importantForAutofill="no" />

                        <TextView
                            android:id="@+id/loopBarTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/to"
                            android:textAlignment="center"
                            android:gravity="start" />

                        <EditText
                            android:id="@+id/loopEnd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/default_end_start"
                            android:inputType="number"
                            android:textAlignment="center"
                            android:importantForAutofill="no" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tempoTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tempo"
                            android:textAlignment="textEnd"
                            android:gravity="end" />

                        <EditText
                            android:id="@+id/tempoEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/default_tempo"
                            android:inputType="number"
                            android:textAlignment="center"
                            android:importantForAutofill="no" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
